--- a/src/card-widget/card-widget.css
+++ b/src/card-widget/card-widget.css
@@ -15,11 +15,28 @@
 
 .card-item {   
     margin-left: 10px;
+    
 }
 
 .image{
+    position: relative;
+    z-index: 1;
     width: 40px;
-    object-position: 0 -26px;
+       
+    object-position: 0 26px;
+}
+
+.deactive{
+    object-position: 0;
+}
+
+.activator{
+    width: 500px;
+    height: 30px;
+    top: 54px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 2;
 }
 
 .form {
@@ -38,3 +55,48 @@
     border-radius: 3px;
     color: #fff;
 }
+
+.popup-wrapper {
+    background-color: #000;
+    opacity: 0.9;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 5;
+    display: flex;
+    justify-content: center;
+  }
+
+  .close {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    z-index: 6;
+    top: -50px;
+    left: 100%;  
+
+    color: #b30000;    
+    background-color: #fff;
+    border-radius: 50%
+  }
+
+  .popup {
+    position: fixed;
+    z-index: 2;
+    color: #bd0000;
+    font-size: 2rem;
+    top: 100px;
+    width: 300px;
+    height: 100px;
+    background-color: #fff;
+    padding: 1rem;
+    border: 2px solid #cc890c;
+    border-radius: 5px;
+  }
+
+    
+  .disable {
+    display: none;
+  }
